# PsxEngine

./: .gitignore  CMakeLists.txt
Core/: CMakeLists.txt
Core/include/: Core.h  TransformComponent.h  Vector3.h
Core/source/: Core.cpp  TransformComponent.cpp  Vector3.cpp
ECS/: CMakeLists.txt
ECS/include/: Component.h  ComponentId.h  ComponentManager.h  ECS.h  Entity.h  EntityManager.h  Exceptions.h  Scene.h  System.h
ECS/source/: Component.cpp  ComponentManager.cpp  ECS.cpp  Entity.cpp  EntityManager.cpp  Exceptions.cpp  Scene.cpp  System.cpp
Engine/: CMakeLists.txt
Engine/include/: Engine.h  Scene.h
Engine/source/: Engine.cpp  Scene.cpp
Input/: CMakeLists.txt
Input/include/: Input.h
Input/source/: Input.cpp
Rendering/: CMakeLists.txt
Rendering/include/: GameRenderSystem.h  GameRendering.h  RenderComponent.h  Rendering.h  Structs.h  ToolRendering.h  Window.h
Rendering/source/: GameRenderSystem.cpp  GameRendering.cpp  RenderComponent.cpp  Rendering.cpp  Structs.cpp  ToolRendering.cpp  Window.cpp
Test/: CMakeLists.txt  Test.cpp
Test/include/: PrintComponent.h  TestComponent.h  TestSystem.h
Test/source/: PrintComponent.cpp  TestComponent.cpp  TestSystem.cpp
Utils/: CMakeLists.txt
Utils/include/: UtilFunctions.hpp
